--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
 
   kestra:
     image: kestra/kestra:latest-full
+    env_file:
+      - .env
     pull_policy: always
     # Note that this is meant for development only. Refer to the documentation for production deployments of Kestra which runs without a root user.
     user: "root"
@@ -50,7 +52,7 @@ services:
         kestra:
           server:
             basic-auth:
-              enabled: false
+              enabled: true
               username: "admin@kestra.io" # it must be a valid email address
               password: kestra
           repository:
